# NSLumiere

./: .gitignore  README.md  changeLog.txt  github.xml  requirements.txt  setup.py  setupChromaTEM.py  setupCold.py  setupDebug.py  setupLille.py  setupLum.py  vcs.xml
.github/ISSUE_TEMPLATE/: bug_report.md
Script_Examples/: CalibrateVSM.py  CalibrateVideoOffSet.py  Calibrate_stepper_scan.py  Calibrate_stepper_scan_usim.py  DriftChromaTEMStage.py  GeneralPurpose.py  LissajousCorrectArray.py  LissajousInterpolation.py  Mechanical_spectra.py  Mechanical_spectra_analysis.py  Set4DMask.py  SpectrumReordering.py  get_Instrument.py  open_spim_slice.py  scan_pattern.py  spectro.py  turnTDC.py
Script_Exemples/: get_Instrument.py
hello_diafs/: hi_diaf.py
hello_eels_spec/: hi_spec.py
hello_obj/: hi_obj.py
nionswift_plugin/: global_settings.json
nionswift_plugin/EELS_spec/: EELS_controller.py  __init__.py  eels_settings.json  eels_settings.txt  eels_spec.py  eels_spec_inst.py  eels_spec_panel.py  eels_spec_vi.py
nionswift_plugin/IVG/: ConfigVGLumDialog.py  VGCameraPanel.py  VGCameraYves.py  VGScanYves.py  __init__.py  airlock.py  airlock_vi.py  gun.py  gun_vi.py  ivg_inst.py  ivg_panel.py  ivg_spim_panel.py  ivg_vi.py  orsayscan.py
nionswift_plugin/Mirror/: __init__.py  mirror.py  mirror_inst.py  mirror_panel.py  mirror_vi.py
nionswift_plugin/OptMono/: __init__.py  mono_inst.py  mono_panel.py  opt_mono.py  opt_mono_vi.py
nionswift_plugin/OptSpec/: __init__.py  optspec_inst.py  optspec_panel.py  spec.py  (+2 more)
swift_rust/: Cargo.toml
swift_rust/src/: lib.rs  main.rs
(+86 files in other folders)
