[package]
name = "swift_rust"
version = "0.1.0"
authors = ["yvesauad <yvesauad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="rust2swift"
crate-type=["cdylib"]


[dependencies.cpython]
version="0.6"
features=["extension-module"]
